Attempts to fix padding of blurb on mobile devices
[#156653157]

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -66,7 +66,7 @@
 
     .home__blurb {
         width: 100vw;
-        padding-top: 6vh;
+        padding-top: 3vh;
     }
 
     .home__blurb__hello {
